# reflexion-smolagents

./: README.md  pyproject.toml
examples/: reflexion_agent.py
src/smolagents/: agents.py  evaluator.py  self_reflection.py
src/smolagents/prompts/: reflexion_agent.yaml
